ER-1 code sample for error

--- a/app/components/main/settings/settings.html
+++ b/app/components/main/settings/settings.html
@@ -1,7 +1,7 @@
 <top-navbar></top-navbar>
 
 <ion-content>
-    <h1 padding text-center>
+    <h1 padding text-center style="color: red;">
         The settings page
     </h1>
 </ion-content>
