ER-1 simplify project to concrete error

--- a/app/components/main/settings/settings.html
+++ b/app/components/main/settings/settings.html
@@ -1,7 +1,6 @@
-<top-navbar></top-navbar>
-
 <ion-content>
     <h1 padding text-center style="color: red;">
         The settings page
     </h1>
+    <button (click)="open()">Open home</button>
 </ion-content>
