--- a/app/assets/scss/app.variables.scss
+++ b/app/assets/scss/app.variables.scss
@@ -19,12 +19,22 @@
 // The "primary" color is the only required color in the map.
 // Both iOS and MD colors can be further customized if colors
 // are different per mode.
+@import 'globals.core'; // breaking change ionic2beta-4
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #FBAE16,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
   favorite:   #69BB7B
 );
+
+$navbar-text-color: #9BCEDF;
+$content-text-color: black;
+$background-color: #071216;
+$major-text-color: #FFFFFF;
+$second-text-color: #FBAE16;
+$btn-bg-color: #FBAE16;
+$secondary-bg-color: #0B1845;
+$border-color: #c8c7cc;
