--- a/app/components/navigation/top-navbar/top-navbar.html
+++ b/app/components/navigation/top-navbar/top-navbar.html
@@ -1,34 +1,44 @@
 <div #content>
-    <ion-navbar class="authorized-navbar" *navbar>
-        <button menuToggle style="width: 100%; padding: 20px;background-color: #387ef5;">OPEN MENU</button>
+    <ion-navbar *navbar>
+        <button menuToggle end>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+
+        <ion-title>
+            {{title | translate}}
+        </ion-title>
     </ion-navbar>
-
-    <div>
-        <ion-segment class="authorized-links" [(ngModel)]="pet">
-            <ion-segment-button value="2" (click)="openPage('settings')">
-                Settings link (not work)
-            </ion-segment-button>
-        </ion-segment>
-    </div>
-
 </div>
 
 <ion-menu side="right" [content]="content">
     <ion-toolbar class="ion-menu-logo">
-        <ion-title>Menu</ion-title>
+        <ion-title>{{'TOP_NAVBAR.TITLE' | translate}}</ion-title>
     </ion-toolbar>
 
     <ion-content>
         <ion-list>
-
             <button class="ion-menu-button"
                     ion-item
                     menuClose
-                    (click)="openPage('settings')">
-                <ion-icon item-left name="globe"></ion-icon>
-                Settings link (not work)
+                    (click)="openPage('calculator')">
+                <ion-icon item-left name="ios-cash-outline"></ion-icon>
+                <span>{{'TOP_NAVBAR.MENU.CALCULATOR' | translate}}</span>
             </button>
-
+            <button class="ion-menu-button"
+                    ion-item
+                    menuClose
+                    (click)="openPage('dashboards', {checkAuth: true})">
+                <ion-icon item-left name="ios-clipboard-outline"></ion-icon>
+                <span>{{'TOP_NAVBAR.MENU.DASHBOARDS' | translate}}</span>
+            </button>
+            <button *ngIf="authorized"
+                     class="ion-menu-button"
+                    ion-item
+                    menuClose
+                    (click)="logOut()">
+                <ion-icon item-left name="log-out"></ion-icon>
+                <span>{{'TOP_NAVBAR.MENU.LOG_OUT' | translate}}</span>
+            </button>
         </ion-list>
     </ion-content>
 </ion-menu>
