ER-3 simple example for show error

--- a/app/assets/scss/app.variables.scss
+++ b/app/assets/scss/app.variables.scss
@@ -19,9 +19,10 @@
 // The "primary" color is the only required color in the map.
 // Both iOS and MD colors can be further customized if colors
 // are different per mode.
+@import 'globals.core'; // breaking change ionic2beta-4
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #FBAE16,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
