--- a/app/assets/scss/imports.scss
+++ b/app/assets/scss/imports.scss
@@ -7,3 +7,4 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
+//@import "node_modules/flag-icon-css/sass/_flag-icon"; // import css for flags. Gulp task - "countryFlagIcons"
