--- a/app/assets/scss/core/app.md.scss
+++ b/app/assets/scss/core/app.md.scss
@@ -4,28 +4,28 @@
 // App Shared Variables
 // --------------------------------------------------
 // Shared Sass variables go in the app.varialbes.scss file
-@import 'app.variables';
+@import '../app.variables';
 
 
-// App iOS Variables
+// App Material Design Variables
 // --------------------------------------------------
-// iOS only Sass variables can go here
+// Material Design only Sass variables can go here
 
 
-// Ionic iOS Sass
+// Ionic Material Design Sass
 // --------------------------------------------------
 // Custom App variables must be declared before importing Ionic.
 // Ionic will use its default values when a custom variable isn't provided.
-@import 'ionic.ios';
+@import 'ionic.md';
 
 
 // App Shared Sass
 // --------------------------------------------------
 // All Sass files that make up this app goes into the app.core.scss file.
 // For simpler CSS overrides, custom app CSS must come after Ionic's CSS.
-@import 'imports';
+@import '../imports';
 
 
-// App iOS Only Sass
+// App Material Design Only Sass
 // --------------------------------------------------
-// CSS that should only apply to the iOS app
+// CSS that should only apply to the Material Design app
