--- a/app/components/main/transferBeneficiary/pick-account/pick-account.html
+++ b/app/components/main/transferBeneficiary/pick-account/pick-account.html
@@ -1,7 +1,5 @@
-<!--<top-navbar title="CALCULATOR.TITLE"></top-navbar>-->
-
-<div #content>
-    <ion-navbar *navbar>
+<ion-header #content>
+    <ion-navbar>
         <button menuToggle end>
             <ion-icon name="menu"></ion-icon>
         </button>
@@ -10,7 +8,7 @@
             {{title | translate}}
         </ion-title>
     </ion-navbar>
-</div>
+</ion-header>
 
 <ion-menu side="right" [content]="content">
     <ion-toolbar class="ion-menu-logo">
